# Algorithm_OaldresPuzzleCryptic

OOP/: BitRotation.hpp  BuildProject.sh  CMakeLists.txt  CMakeSettings.json  CommonSecurity.hpp  DataFormating.hpp  README.md  RandomNumberDistribution.hpp  SecureSeedGenerator.hpp  SupportBaseFunctions.hpp  main.cpp
OOP/BlockCipher/: CustomSecureHash.hpp  Module_MixTransformationUtil.cpp  Module_MixTransformationUtil.hpp  Module_SecureRoundSubkeyGeneratation.cpp  Module_SecureRoundSubkeyGeneratation.hpp  Module_SecureSubkeyGeneratation.cpp  Module_SecureSubkeyGeneratation.hpp  Module_SubkeyMatrixOperation.cpp  Module_SubkeyMatrixOperation.hpp  Modules_OaldresPuzzle_Cryptic.hpp  OPC_MainAlgorithm_Worker.cpp  OPC_MainAlgorithm_Worker.hpp  OaldresPuzzle_Cryptic.cpp  OaldresPuzzle_Cryptic.hpp
OOP/BlockCipher/ExtraIncludes/: MontgomeryScalarEigen.hpp
OOP/BlockCipher/Includes/: PRNGs.hpp
OOP/BlockCipher/Includes/KeyDerivationFunction/: PBKDF2.cpp  PBKDF2.hpp  Scrypt.cpp  Scrypt.hpp
OOP/BlockCipher/Includes/SecureHashProvider/: HMAC_Worker.cpp  HMAC_Worker.hpp  SHA2_512.cpp  SHA2_512.hpp
OOP/C_API/: Wrapper_LittleOaldresPuzzle_Cryptic.cpp  Wrapper_LittleOaldresPuzzle_Cryptic.h  Wrapper_OaldresPuzzle_Cryptic.cpp  Wrapper_OaldresPuzzle_Cryptic.h
OOP/StreamCipher/: GenerateAndDisplay_XorConstantRotation_RoundConstant.py  LittleOaldresPuzzle_Cryptic.cpp  LittleOaldresPuzzle_Cryptic.h  XorConstantRotation.cpp  XorConstantRotation.h
OOP/TechnicalDetailPapers/[Type 1] Statistical Test Result Tables/: ASCON(Phases 1).xlsx  ASCON(Phases 2).xlsx  Chacha20(Phases 1).xlsx  Chacha20(Phases 2).xlsx  Little OaldresPuzzle Cryptic(Phases 1).xlsx  Little OaldresPuzzle Cryptic(Phases 2).xlsx
OOP/Test/: Test_LittleOaldresPuzzle_Cryptic.cpp  Test_LittleOaldresPuzzle_Cryptic.h  Test_OaldresPuzzle_Cryptic.cpp  Test_OaldresPuzzle_Cryptic.h
OOP/[Type 1] NIST/: NIST Test Result Data And Experiment.md
Template/: AlgorithmOaldresPuzzle_Cryptic.sln  AlgorithmOaldresPuzzle_Cryptic.vcxproj  AlgorithmOaldresPuzzle_Cryptic.vcxproj.filters  CMakeLists.txt  CMakeSettings.json
Template/include/CommonSecurity/: CommonSecurity.hpp  OPC_PRNGs.hpp  SecureRandomUtilLibrary.hpp
Template/include/CommonSecurity/KeyDerivationFunction/: AlgorithmScrypt.hpp
Template/include/CommonSecurity/SecureHashProvider/: AlgorithmBlake3.hpp  AlgorithmVersion2.hpp  AlgorithmVersion3.hpp  Hasher.hpp
Template/include/CommonToolkit/: BytesExchangeInteger.hpp  CommonToolkit.hpp
Template/include/CustomSecurity/: CryptionWorker.hpp
Template/include/Support+Library/: Support-Library.hpp  Support-MyType.hpp
Template/include/UtilTools/: DataFormating.hpp  UtilTools.hpp
Template/source-code/: Main.cpp  UnitTester.hpp
